--- a/perms.cfg
+++ b/perms.cfg
@@ -64,7 +64,7 @@ add_principal identifier.steam:110000100133a7b Fax.member1              # Oliver
 add_principal identifier.steam:110000000000000 Fax.member1              # 
 add_principal identifier.steam:110000100133a7b Fax.member1              # Sheep
 add_principal identifier.steam:11000011aa7721d Fax.member1              # [635] S_D1ZZL3
-add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000106eda0ci Fax.member1              # holden
 add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
 add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
 add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
