--- a/perms.cfg
+++ b/perms.cfg
@@ -72,6 +72,35 @@ add_principal identifier.steam:110000000000000 Fax.member1              # Member
 add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
 add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
 add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+add_principal identifier.steam:110000000000000 Fax.member1              # Member 1
+
 
 
 
